// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreatableSelect component testing Disable multiple CreatableSelected 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ gdZRVI"
  >
    <div
      class=" css-3iigni-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-7-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
        role="log"
      />
      <div
        aria-disabled="true"
        class=" css-yw5jbj-control"
      >
        <div
          class=" css-1iral9k-ValueContainer"
        >
          <div
            class=" css-tiolb5-multiValue"
          >
            <div
              class=" css-5kixvp-MultiValueGeneric"
            >
              hoge
            </div>
            <div
              aria-label="Remove hoge"
              class=" css-1v8dlmp-MultiValueRemove"
              role="button"
            >
              <span
                class="sc-eCYdqJ iymozk"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20ZM12 10.5858L14.8284 7.75736L16.2426 9.17157L13.4142 12L16.2426 14.8284L14.8284 16.2426L12 13.4142L9.17157 16.2426L7.75736 14.8284L10.5858 12L7.75736 9.17157L9.17157 7.75736L12 10.5858Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class=" css-tiolb5-multiValue"
          >
            <div
              class=" css-5kixvp-MultiValueGeneric"
            >
              huga
            </div>
            <div
              aria-label="Remove huga"
              class=" css-1v8dlmp-MultiValueRemove"
              role="button"
            >
              <span
                class="sc-eCYdqJ iymozk"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20ZM12 10.5858L14.8284 7.75736L16.2426 9.17157L13.4142 12L16.2426 14.8284L14.8284 16.2426L12 13.4142L9.17157 16.2426L7.75736 14.8284L10.5858 12L7.75736 9.17157L9.17157 7.75736L12 10.5858Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class=" css-1urfujn-Input"
            data-value=""
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="react-select-7-listbox"
              aria-expanded="true"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              disabled=""
              id="react-select-7-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            aria-hidden="true"
            class=" css-1xc3v61-indicatorContainer"
          >
            <div
              class="sc-jSMfEi eDcIgw"
            >
              <span
                class="sc-eCYdqJ iymozk"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0,0H24V24H0Z"
                    fill="none"
                  />
                  <path
                    d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
                    fill="#B3BAC1"
                    transform="translate(-1.414 -1.114)"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" css-fqzh9e-menu"
      >
        <div
          aria-multiselectable="true"
          class="sc-gsnTZi inqBSZ css-1jcex0u-MenuList"
          id="react-select-7-listbox"
          role="listbox"
        >
          <div
            class=" css-1ufqtev-NoOptionsMessage"
          >
            Not found
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreatableSelect component testing Disable not CreatableSelected 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ gdZRVI"
  >
    <div
      class=" css-3iigni-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-5-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
        role="log"
      />
      <div
        aria-disabled="true"
        class=" css-yw5jbj-control"
      >
        <div
          class=" css-14yxm9c-ValueContainer"
        >
          <div
            class=" css-1wzpoj0-placeholder"
            id="react-select-5-placeholder"
          >
            Select...
          </div>
          <div
            class=" css-1urfujn-Input"
            data-value=""
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="react-select-5-listbox"
              aria-describedby="react-select-5-placeholder"
              aria-expanded="true"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              disabled=""
              id="react-select-5-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            aria-hidden="true"
            class=" css-1xc3v61-indicatorContainer"
          >
            <div
              class="sc-jSMfEi eDcIgw"
            >
              <span
                class="sc-eCYdqJ iymozk"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0,0H24V24H0Z"
                    fill="none"
                  />
                  <path
                    d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
                    fill="#B3BAC1"
                    transform="translate(-1.414 -1.114)"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" css-fqzh9e-menu"
      >
        <div
          aria-multiselectable="false"
          class="sc-gsnTZi inqBSZ css-1jcex0u-MenuList"
          id="react-select-5-listbox"
          role="listbox"
        >
          <div
            aria-disabled="false"
            aria-selected="false"
            class=" css-1mw1c1j-option"
            id="react-select-5-option-0"
            role="option"
            tabindex="-1"
          >
            hoge
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class=" css-1mw1c1j-option"
            id="react-select-5-option-1"
            role="option"
            tabindex="-1"
          >
            huga
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreatableSelect component testing Disable one CreatableSelected 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ gdZRVI"
  >
    <div
      class=" css-3iigni-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-6-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
        role="log"
      />
      <div
        aria-disabled="true"
        class=" css-yw5jbj-control"
      >
        <div
          class=" css-14yxm9c-ValueContainer"
        >
          <div
            class=" css-tncq6p-singleValue"
          >
            hoge
          </div>
          <div
            class=" css-1urfujn-Input"
            data-value=""
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="react-select-6-listbox"
              aria-expanded="true"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              disabled=""
              id="react-select-6-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            aria-hidden="true"
            class=" css-1xc3v61-indicatorContainer"
          >
            <div
              class="sc-jSMfEi eDcIgw"
            >
              <span
                class="sc-eCYdqJ iymozk"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0,0H24V24H0Z"
                    fill="none"
                  />
                  <path
                    d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
                    fill="#B3BAC1"
                    transform="translate(-1.414 -1.114)"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" css-fqzh9e-menu"
      >
        <div
          aria-multiselectable="false"
          class="sc-gsnTZi inqBSZ css-1jcex0u-MenuList"
          id="react-select-6-listbox"
          role="listbox"
        >
          <div
            aria-disabled="false"
            aria-selected="true"
            class=" css-1hd25el-option"
            id="react-select-6-option-0"
            role="option"
            tabindex="-1"
          >
            hoge
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class=" css-1mw1c1j-option"
            id="react-select-6-option-1"
            role="option"
            tabindex="-1"
          >
            huga
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreatableSelect component testing Error multiple CreatableSelected 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ jDqySb"
  >
    <div
      class=" css-b62m3t-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-10-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
        role="log"
      />
      <div
        class=" css-q6ehzp-control"
      >
        <div
          class=" css-1iral9k-ValueContainer"
        >
          <div
            class=" css-tiolb5-multiValue"
          >
            <div
              class=" css-1644w8u-MultiValueGeneric"
            >
              hoge
            </div>
            <div
              aria-label="Remove hoge"
              class=" css-1v8dlmp-MultiValueRemove"
              role="button"
            >
              <span
                class="sc-eCYdqJ iymozk"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20ZM12 10.5858L14.8284 7.75736L16.2426 9.17157L13.4142 12L16.2426 14.8284L14.8284 16.2426L12 13.4142L9.17157 16.2426L7.75736 14.8284L10.5858 12L7.75736 9.17157L9.17157 7.75736L12 10.5858Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class=" css-tiolb5-multiValue"
          >
            <div
              class=" css-1644w8u-MultiValueGeneric"
            >
              huga
            </div>
            <div
              aria-label="Remove huga"
              class=" css-1v8dlmp-MultiValueRemove"
              role="button"
            >
              <span
                class="sc-eCYdqJ iymozk"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20ZM12 10.5858L14.8284 7.75736L16.2426 9.17157L13.4142 12L16.2426 14.8284L14.8284 16.2426L12 13.4142L9.17157 16.2426L7.75736 14.8284L10.5858 12L7.75736 9.17157L9.17157 7.75736L12 10.5858Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class=" css-17e9r92-Input"
            data-value=""
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="react-select-10-listbox"
              aria-expanded="true"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-10-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            class="sc-hKMtZM"
          >
            <div
              aria-hidden="true"
              class=" css-1xc3v61-indicatorContainer"
            >
              <span
                class="sc-eCYdqJ iymozk"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20ZM12 10.5858L14.8284 7.75736L16.2426 9.17157L13.4142 12L16.2426 14.8284L14.8284 16.2426L12 13.4142L9.17157 16.2426L7.75736 14.8284L10.5858 12L7.75736 9.17157L9.17157 7.75736L12 10.5858Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            aria-hidden="true"
            class=" css-1xc3v61-indicatorContainer"
          >
            <div
              class="sc-jSMfEi eDcIgw"
            >
              <span
                class="sc-eCYdqJ iymozk"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0,0H24V24H0Z"
                    fill="none"
                  />
                  <path
                    d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
                    fill="#EB0A4E"
                    transform="translate(-1.414 -1.114)"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" css-vcx9vk-menu"
      >
        <div
          aria-multiselectable="true"
          class="sc-gsnTZi inqBSZ css-1jcex0u-MenuList"
          id="react-select-10-listbox"
          role="listbox"
        >
          <div
            class=" css-1ufqtev-NoOptionsMessage"
          >
            Not found
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreatableSelect component testing Error not CreatableSelected 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ jDqySb"
  >
    <div
      class=" css-b62m3t-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-8-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
        role="log"
      />
      <div
        class=" css-q6ehzp-control"
      >
        <div
          class=" css-14yxm9c-ValueContainer"
        >
          <div
            class=" css-lunmsi-placeholder"
            id="react-select-8-placeholder"
          >
            Select...
          </div>
          <div
            class=" css-17e9r92-Input"
            data-value=""
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="react-select-8-listbox"
              aria-describedby="react-select-8-placeholder"
              aria-expanded="true"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-8-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            aria-hidden="true"
            class=" css-1xc3v61-indicatorContainer"
          >
            <div
              class="sc-jSMfEi eDcIgw"
            >
              <span
                class="sc-eCYdqJ iymozk"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0,0H24V24H0Z"
                    fill="none"
                  />
                  <path
                    d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
                    fill="#EB0A4E"
                    transform="translate(-1.414 -1.114)"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" css-vcx9vk-menu"
      >
        <div
          aria-multiselectable="false"
          class="sc-gsnTZi inqBSZ css-1jcex0u-MenuList"
          id="react-select-8-listbox"
          role="listbox"
        >
          <div
            aria-disabled="false"
            aria-selected="false"
            class=" css-1mw1c1j-option"
            id="react-select-8-option-0"
            role="option"
            tabindex="-1"
          >
            hoge
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class=" css-1mw1c1j-option"
            id="react-select-8-option-1"
            role="option"
            tabindex="-1"
          >
            huga
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreatableSelect component testing Error one CreatableSelected 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ jDqySb"
  >
    <div
      class=" css-b62m3t-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-9-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
        role="log"
      />
      <div
        class=" css-q6ehzp-control"
      >
        <div
          class=" css-14yxm9c-ValueContainer"
        >
          <div
            class=" css-ayvmsf-singleValue"
          >
            hoge
          </div>
          <div
            class=" css-17e9r92-Input"
            data-value=""
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="react-select-9-listbox"
              aria-expanded="true"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-9-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            class="sc-hKMtZM"
          >
            <div
              aria-hidden="true"
              class=" css-1xc3v61-indicatorContainer"
            >
              <span
                class="sc-eCYdqJ iymozk"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20ZM12 10.5858L14.8284 7.75736L16.2426 9.17157L13.4142 12L16.2426 14.8284L14.8284 16.2426L12 13.4142L9.17157 16.2426L7.75736 14.8284L10.5858 12L7.75736 9.17157L9.17157 7.75736L12 10.5858Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            aria-hidden="true"
            class=" css-1xc3v61-indicatorContainer"
          >
            <div
              class="sc-jSMfEi eDcIgw"
            >
              <span
                class="sc-eCYdqJ iymozk"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0,0H24V24H0Z"
                    fill="none"
                  />
                  <path
                    d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
                    fill="#EB0A4E"
                    transform="translate(-1.414 -1.114)"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" css-vcx9vk-menu"
      >
        <div
          aria-multiselectable="false"
          class="sc-gsnTZi inqBSZ css-1jcex0u-MenuList"
          id="react-select-9-listbox"
          role="listbox"
        >
          <div
            aria-disabled="false"
            aria-selected="true"
            class=" css-1hd25el-option"
            id="react-select-9-option-0"
            role="option"
            tabindex="-1"
          >
            hoge
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class=" css-1mw1c1j-option"
            id="react-select-9-option-1"
            role="option"
            tabindex="-1"
          >
            huga
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreatableSelect component testing Normal multiple CreatableSelected 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ jDqySb"
  >
    <div
      class=" css-b62m3t-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-4-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
        role="log"
      />
      <div
        class=" css-1oh1mzt-control"
      >
        <div
          class=" css-1iral9k-ValueContainer"
        >
          <div
            class=" css-tiolb5-multiValue"
          >
            <div
              class=" css-1x88s89-MultiValueGeneric"
            >
              hoge
            </div>
            <div
              aria-label="Remove hoge"
              class=" css-1v8dlmp-MultiValueRemove"
              role="button"
            >
              <span
                class="sc-eCYdqJ iymozk"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20ZM12 10.5858L14.8284 7.75736L16.2426 9.17157L13.4142 12L16.2426 14.8284L14.8284 16.2426L12 13.4142L9.17157 16.2426L7.75736 14.8284L10.5858 12L7.75736 9.17157L9.17157 7.75736L12 10.5858Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class=" css-tiolb5-multiValue"
          >
            <div
              class=" css-1x88s89-MultiValueGeneric"
            >
              huga
            </div>
            <div
              aria-label="Remove huga"
              class=" css-1v8dlmp-MultiValueRemove"
              role="button"
            >
              <span
                class="sc-eCYdqJ iymozk"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20ZM12 10.5858L14.8284 7.75736L16.2426 9.17157L13.4142 12L16.2426 14.8284L14.8284 16.2426L12 13.4142L9.17157 16.2426L7.75736 14.8284L10.5858 12L7.75736 9.17157L9.17157 7.75736L12 10.5858Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class=" css-17e9r92-Input"
            data-value=""
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="react-select-4-listbox"
              aria-expanded="true"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-4-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            class="sc-hKMtZM"
          >
            <div
              aria-hidden="true"
              class=" css-1xc3v61-indicatorContainer"
            >
              <span
                class="sc-eCYdqJ iymozk"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20ZM12 10.5858L14.8284 7.75736L16.2426 9.17157L13.4142 12L16.2426 14.8284L14.8284 16.2426L12 13.4142L9.17157 16.2426L7.75736 14.8284L10.5858 12L7.75736 9.17157L9.17157 7.75736L12 10.5858Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            aria-hidden="true"
            class=" css-1xc3v61-indicatorContainer"
          >
            <div
              class="sc-jSMfEi eDcIgw"
            >
              <span
                class="sc-eCYdqJ iymozk"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0,0H24V24H0Z"
                    fill="none"
                  />
                  <path
                    d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
                    fill="#041C33"
                    transform="translate(-1.414 -1.114)"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" css-fqzh9e-menu"
      >
        <div
          aria-multiselectable="true"
          class="sc-gsnTZi inqBSZ css-1jcex0u-MenuList"
          id="react-select-4-listbox"
          role="listbox"
        >
          <div
            class=" css-1ufqtev-NoOptionsMessage"
          >
            Not found
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreatableSelect component testing Normal not CreatableSelected 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ jDqySb"
  >
    <div
      class=" css-b62m3t-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-2-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
        role="log"
      />
      <div
        class=" css-1oh1mzt-control"
      >
        <div
          class=" css-14yxm9c-ValueContainer"
        >
          <div
            class=" css-ydlppi-placeholder"
            id="react-select-2-placeholder"
          >
            Select...
          </div>
          <div
            class=" css-17e9r92-Input"
            data-value=""
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="react-select-2-listbox"
              aria-describedby="react-select-2-placeholder"
              aria-expanded="true"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-2-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            aria-hidden="true"
            class=" css-1xc3v61-indicatorContainer"
          >
            <div
              class="sc-jSMfEi eDcIgw"
            >
              <span
                class="sc-eCYdqJ iymozk"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0,0H24V24H0Z"
                    fill="none"
                  />
                  <path
                    d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
                    fill="#041C33"
                    transform="translate(-1.414 -1.114)"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" css-fqzh9e-menu"
      >
        <div
          aria-multiselectable="false"
          class="sc-gsnTZi inqBSZ css-1jcex0u-MenuList"
          id="react-select-2-listbox"
          role="listbox"
        >
          <div
            aria-disabled="false"
            aria-selected="false"
            class=" css-1mw1c1j-option"
            id="react-select-2-option-0"
            role="option"
            tabindex="-1"
          >
            hoge
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class=" css-1mw1c1j-option"
            id="react-select-2-option-1"
            role="option"
            tabindex="-1"
          >
            huga
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreatableSelect component testing Normal one CreatableSelected 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ jDqySb"
  >
    <div
      class=" css-b62m3t-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-3-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
        role="log"
      />
      <div
        class=" css-1oh1mzt-control"
      >
        <div
          class=" css-14yxm9c-ValueContainer"
        >
          <div
            class=" css-t1czkd-singleValue"
          >
            hoge
          </div>
          <div
            class=" css-17e9r92-Input"
            data-value=""
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="react-select-3-listbox"
              aria-expanded="true"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-3-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            class="sc-hKMtZM"
          >
            <div
              aria-hidden="true"
              class=" css-1xc3v61-indicatorContainer"
            >
              <span
                class="sc-eCYdqJ iymozk"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20ZM12 10.5858L14.8284 7.75736L16.2426 9.17157L13.4142 12L16.2426 14.8284L14.8284 16.2426L12 13.4142L9.17157 16.2426L7.75736 14.8284L10.5858 12L7.75736 9.17157L9.17157 7.75736L12 10.5858Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            aria-hidden="true"
            class=" css-1xc3v61-indicatorContainer"
          >
            <div
              class="sc-jSMfEi eDcIgw"
            >
              <span
                class="sc-eCYdqJ iymozk"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0,0H24V24H0Z"
                    fill="none"
                  />
                  <path
                    d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
                    fill="#041C33"
                    transform="translate(-1.414 -1.114)"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" css-fqzh9e-menu"
      >
        <div
          aria-multiselectable="false"
          class="sc-gsnTZi inqBSZ css-1jcex0u-MenuList"
          id="react-select-3-listbox"
          role="listbox"
        >
          <div
            aria-disabled="false"
            aria-selected="true"
            class=" css-1hd25el-option"
            id="react-select-3-option-0"
            role="option"
            tabindex="-1"
          >
            hoge
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class=" css-1mw1c1j-option"
            id="react-select-3-option-1"
            role="option"
            tabindex="-1"
          >
            huga
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
